add the improved resume

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <!-- Embed the PDF file -->
-    <iframe src="demo.pdf" width="100%" height="600px" style="border: none;"></iframe>
+    <iframe src="HarpreetSinghResume.pdf" width="100%" height="600px" style="border: none;"></iframe>
     
     <!-- Provide a download link -->
     <p>
-        <a href="demo.pdf" download>Download PDF</a>
+        <a href="HarpreetSinghResume.pdf" download>Download PDF</a>
     </p>
 </body>
 </html>
