--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Embed the PDF file -->
-    <iframe src="HarpreetSinghResume.pdf" width="100%" height="600px" style="border: none;"></iframe>
+    <iframe src="HarpreetResume.pdf" width="100%" height="600px" style="border: none;"></iframe>
     
     <!-- Provide a download link -->
     <p>
